# LearningDirectX12

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  README_JP.md  build.bat  imgui.ini
Assets/GlTF/concrete_cat_statue_2k.gltf/textures/: concrete_cat_statue_disp_2k.exr
Assets/GlTF/rock_terrain_2k.gltf/: rock_boulder_cracked_2k.gltf
docs/archive/handoffs/: handoff-2026-02-10-phase9-postprocess.md  handoff-2026-02-11-particle-multi-emitter.md  handoff-2026-02-12-ibl.md  handoff-2026-02-13-csm.md  handoff-2026-02-13-ssao.md  handoff-2026-02-14-motion-blur.md  handoff-2026-02-14-pbr-normal-mapping.md  handoff-2026-02-15-dof.md  handoff-2026-02-15-material-system.md  handoff-2026-02-15-parallax.md  handoff-2026-02-17-deferred-rendering.md  handoff-2026-02-17-instanced-rendering.md  handoff-2026-02-17-multi-light.md  handoff-2026-02-18-gameplay-phase0.md  handoff-2026-02-18-resolution-support.md  handoff-2026-02-18-taa.md  handoff-2026-02-18-terrain-lod.md  handoff-2026-02-19-phase4-complete.md  handoff-2026-02-23-editor-brushup.md  handoff-2026-02-23-grid-gauntlet-phase1.md  handoff-2026-02-23-milestone4-phase0.md  handoff-2026-02-23-phase1-bugfix-camera.md  handoff-2026-02-23-phase1-geometry-tools.md  handoff-2026-02-23-phase2-material-editor.md  handoff-2026-02-23-phase3-lighting-panel.md  handoff-2026-02-25-phase4-shadow-postprocess.md  handoff-2026-02-25-phase5a-bugfix.md  handoff-2026-02-25-phase5a-grid-editor.md  handoff-2026-02-26-phase5c-catchup.md  handoff-2026-02-27-phase6-camera-system.md  handoff-2026-02-27-phase7-asset-browser.md  handoff-2026-03-01-grid-gauntlet-phase2.md  handoff-2026-03-01-grid-gauntlet-phase4.md  handoff-2026-03-01-phase4-bugfix.md  handoff-2026-03-01-phase6-vfx-visual-polish.md  handoff-2026-03-03-phase3-towers.md  handoff-2026-03-03-phase8-particles.md
docs/summaries/: handoff-2026-02-18-vfx-phase1.md  handoff-2026-02-25-phase5b-viewport-rendering.md  handoff-2026-02-28-phase8-play-mode-hot-reload.md  handoff-2026-03-01-phase7-ui-polish.md  handoff-2026-03-03-phase9-procedural-tiles.md  plan-phase3-game-polish.md
notes/: camera_notes.md  cascade_shadows_notes.md  deferred_rendering_notes.md  depthbuffer_basic3d_notes.md  dof_notes.md  frame_resources_notes.md  game_core_system_implemented.md  gameplay_phase0_notes.md  glTF_notes.md  glTF_textures_notes.md  gltf_vs_assimp.md  ibl_notes.md  imgui_notes.md  instanced_rendering_notes.md  issue_notes.md  lighting_v1_notes.md  material_system_notes.md  motion_blur_notes.md  multi_light_notes.md  parallax_notes.md  particle_system_notes.md  pbr_normal_mapping_notes.md  postprocess_notes.md  render_passes_notes.md  resolution_support_notes.md  scene_baseline_notes.md  shadowmap_notes.md  skybox_notes.md  ssao_notes.md  starting_points.md  taa_notes.md  terrain_lod_notes.md  terrain_notes.md  vfx_phase1_notes.md
notes/game_engine/: editor_phase0_brushup.md  editor_phase1_bugfix_camera.md  editor_phase1_geometry_tools.md  editor_phase2_material_editor.md  editor_phase3_lighting_panel.md  editor_phase4_shadow_postprocess.md  editor_phase5a_bugfix.md  editor_phase5a_grid_editor.md  editor_phase5b_viewport_rendering.md  editor_phase5c_towers_playtest.md  editor_phase6_camera_system.md  editor_phase7_asset_browser.md  editor_phase8_play_mode_hot_reload.md
notes/game_phase/: game_phase9_procedural_tiles.md  grid_gauntlet_phase1_notes.md  grid_gauntlet_phase2_notes.md  grid_gauntlet_phase3_notes.md  grid_gauntlet_phase4_notes.md  grid_gauntlet_phase6_notes.md  grid_gauntlet_phase7_notes.md  grid_gauntlet_phase8_notes.md  milestone5_phase1_asset_upgrade.md  milestone5_phase2_skeletal_animation.md  polish_notes.md
notes/important_issue/: Animation_debug_fix_notes.md
save/: stage.json
shaders/: .keep  basic3d.hlsl  bloom.hlsl  deferred_lighting.hlsl  dof.hlsl  fxaa.hlsl  gbuffer.hlsl  highlight.hlsl  ibl.hlsl  mesh.hlsl  motionblur.hlsl  particle.hlsl  postprocess.hlsl  procedural_tiles.hlsli  shadow.hlsl  sky.hlsl  ssao.hlsl  taa.hlsl  triangle.hlsl  velocity.hlsl
src/: AnimationPlayer.cpp  AnimationPlayer.h  Camera.cpp  Camera.h  DxContext.cpp  DxContext.h  DxUtil.cpp  DxUtil.h  GltfLoader.cpp  GltfLoader.h  GridRenderer.cpp  GridRenderer.h  HdriLoader.cpp  HdriLoader.h  IBLGenerator.cpp  IBLGenerator.h  ImGuiLayer.cpp  ImGuiLayer.h  Input.h  Lighting.cpp  Lighting.h  MeshRenderer.cpp  MeshRenderer.h  ParticleRenderer.cpp  ParticleRenderer.h  PostProcess.cpp  PostProcess.h  ProceduralMesh.cpp  ProceduralMesh.h  RenderPass.h  RenderPasses.cpp  RenderPasses.h  SSAORenderer.cpp  SSAORenderer.h  ShaderCompiler.h  ShadowMap.cpp  ShadowMap.h  SkyRenderer.cpp  SkyRenderer.h  TerrainLOD.cpp  (+8 more)
src/engine/: CommandHistory.cpp  CommandHistory.h  Commands.h  Entity.cpp  Entity.h  GizmoController.cpp  GizmoController.h  Scene.cpp  Scene.h  SceneEditor.cpp  SceneEditor.h
src/game/: AssetHandles.h  CollisionSystem.cpp  CollisionSystem.h  EnemyController.cpp  EnemyController.h  Entity.h  GameManager.cpp  GameManager.h  GameState.h  GameVFX.cpp  GameVFX.h  GameVFXEmitters.cpp  GameVFXEmitters.h  PlayerController.cpp  PlayerController.h  ThirdPersonCamera.cpp  ThirdPersonCamera.h
src/gridgame/: GridEditorCommands.h  GridGame.cpp  GridGame.h  GridGameState.h  GridMap.cpp  GridMap.h  GridMaterials.h  GridParticles.h  StageData.cpp  StageData.h  StageSerializer.cpp  StageSerializer.h
